# unet

./: .clippy.toml  .dockerignore  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FIXME.md  LICENSE-MIT  Makefile  README.md  STATUS.md  TODO-ARCHIVE.md  TODO-BACKUP.md  TODO-OLD.md  TODO.md  clippy.toml  config-cluster.toml  config-load-balancer.toml  config-postgres.toml  config-resource-management.toml  config.toml  docker-compose.prod.yml  docker-compose.yml  mise.toml  rust-toolchain.toml  rustfmt.toml  tarpaulin.toml  test_sqlite_datastore.rs
.cargo/: audit.toml  config.toml
crates/config-slicer/: Cargo.toml  README.md
crates/config-slicer/benches/: comprehensive_performance.rs  memory_profiling.rs  simple_benchmarks.rs
crates/config-slicer/src/: api.rs  diff.rs  error.rs  lib.rs  main.rs  parser.rs  slicer.rs  streaming.rs  validation.rs
crates/config-slicer/src/diff/: algorithms.rs  analysis.rs  conflict.rs  display.rs  engine.rs  types.rs  workflow.rs
crates/config-slicer/src/parser/: core.rs  mod.rs  optimized.rs  plugin.rs  vendors.rs
crates/config-slicer/src/slicer/: algorithms.rs  context.rs  lib.rs  mod.rs  patterns.rs
crates/config-slicer/tests/: basic_functionality_tests.rs  check_large_files_script.rs  cli.rs  library.rs  slice_tests.rs
crates/config-slicer/tests/fixtures/: arista_eos_large.cfg  basic_cisco_router_config.txt  cisco_ios_large.cfg  juniper_junos_large.cfg
crates/test-support/: Cargo.toml  README.md
crates/test-support/src/: lib.rs  logging.rs  sqlite.rs
crates/unet-cli/: Cargo.toml
crates/unet-cli/src/: cli_config.rs  dry_run.rs  dry_run_tests.rs  lib.rs  main.rs  runtime.rs
crates/unet-cli/src/commands/: config.rs  export.rs  export_tests.rs  git.rs  import.rs  links.rs  locations.rs  mod.rs  nodes.rs  policy.rs  template.rs  test_support.rs  vendors.rs  vendors_tests.rs
crates/unet-cli/src/remote/: mod.rs  node_api.rs  nodes.rs
crates/unet-cli/tests/: cli_config_tests.rs  cli_integration_tests.rs  remote_cli_command_tests.rs  remote_cli_error_tests.rs  remote_cli_monitoring_tests.rs  remote_cli_tests.rs
crates/unet-cli/tests/support/: mod.rs
crates/unet-core/: Cargo.toml  test_output.txt
crates/unet-core/benches/: policy_performance.rs
crates/unet-core/src/: alerting.rs  auth.rs  change_tracking.rs  cluster.rs  config.rs  config_encryption.rs  database.rs  datastore.rs  distributed_locking.rs  error.rs  escalation.rs  git.rs  lib.rs  live_config.rs  load_balancer.rs  logging.rs  metrics.rs  models.rs  notifications.rs  performance.rs  policy.rs  policy_integration.rs  resource_management.rs  secrets_integration.rs  shared_state.rs  snmp.rs  stateless.rs  template.rs  template_integration.rs  validation.rs
crates/unet-core/src/config/: connection_string.rs  core.rs  defaults.rs  env.rs  migration.rs  mod.rs  network.rs  types.rs  utils.rs  validation.rs
crates/unet-core/src/datastore/: helpers.rs  mod.rs  tests.rs  transaction_helpers.rs  types.rs
crates/unet-core/src/entities/: api_keys.rs  change_approval_workflow.rs  change_audit_log.rs  change_rollback_snapshot.rs  configuration_changes.rs  interface_status.rs  links.rs  locations.rs  mod.rs  node_status.rs  nodes.rs  polling_tasks.rs  roles.rs  template_assignments.rs  template_usage.rs  template_versions.rs  templates.rs  user_roles.rs  users.rs  vendors.rs
crates/unet-core/src/error/: codes.rs  constructors.rs  conversions.rs  mod.rs  reporting.rs  tests.rs
crates/unet-core/src/git/: branch_management.rs  canary.rs  change_tracker.rs  client.rs  config_management.rs  conflict_integration.rs  conflict_resolution.rs  conflict_tools.rs  credentials.rs  emergency.rs  environment.rs  notification.rs  repository.rs  state.rs  types.rs  validation.rs
crates/unet-core/src/logging/: comprehensive_tests.rs  core.rs  mod.rs
crates/unet-core/src/models/: auth.rs  change_tracking.rs  conversions.rs  derived.rs  link.rs  location.rs  mod.rs  node.rs  node_builder.rs  template.rs  validation.rs
crates/unet-core/src/policy/: ast.rs  ast_comprehensive_tests.rs  evaluator.rs  grammar.rs  loader.rs  parser.rs  policy.pest  tests.rs
crates/unet-core/src/policy_integration/: engine.rs  mod.rs  service.rs
crates/unet-core/src/secrets/: external.rs  key_management.rs  main.rs  mod.rs  rotation.rs
crates/unet-core/src/snmp/: client.rs  config.rs  mod.rs  oids.rs  poller.rs  session.rs  testing.rs  types.rs  values.rs
crates/unet-core/src/template/: driven_slicing.rs  environment.rs  header.rs  loader.rs  mod.rs  quality.rs  scope.rs  slice.rs  test_helpers.rs  testing.rs  validation.rs
crates/unet-core/tests/: rest_datastore.rs  sqlite_datastore.rs
crates/unet-server/: Cargo.toml
crates/unet-server/src/: api.rs  background.rs  cert_manager.rs  config_loader.rs  error.rs  lib.rs  main.rs  network_access.rs  security_audit.rs  server.rs  tls.rs  validation.rs  vulnerability_scanner.rs
crates/unet-server/src/background/: manager.rs  mod.rs  policy_task.rs  scheduler.rs
crates/unet-server/src/handlers/: alerting.rs  auth.rs  certificates.rs  changes.rs  cluster.rs  distributed_locking.rs  git.rs  health.rs  links.rs  locations.rs  metrics.rs  mod.rs  network_access.rs  nodes.rs  performance.rs  policies.rs  resource_management.rs  templates.rs  vulnerability.rs
crates/unet-server/src/middleware/: auth.rs  mod.rs  performance.rs  rate_limit.rs  security_audit.rs  validation.rs
crates/unet-server/src/server/: app_state.rs  auth.rs  auth_tests.rs  cors.rs  cors_tests.rs  middleware.rs  mod.rs  routes.rs
crates/unet-server/src/tests/: config_tests.rs  integration_tests.rs  mod.rs
migrations/: Cargo.toml
migrations/src/: lib.rs  m20241221_000001_create_locations_table.rs  m20241221_000002_create_nodes_table.rs  m20241221_000003_create_links_table.rs  m20241221_000004_create_derived_state_tables.rs  m20241224_000001_create_template_tables.rs  m20241226_000001_create_change_tracking_tables.rs  m20250628_000001_create_auth_tables.rs
(+704 files in other folders)
