[workspace]
resolver = "2"
members = [
    "crates/unet-core",
    "crates/unet-server", 
    "crates/unet-cli",
    "crates/config-slicer",
    "migrations",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["μNet Development Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/unet"
homepage = "https://github.com/example/unet"
description = "Network configuration management and automation tool"
keywords = ["network", "configuration", "automation", "snmp", "templates"]
categories = ["command-line-utilities", "network-programming", "config"]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
async-trait = "0.1"
futures = "0.3"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration management
config = "0.14"
toml = "0.8"

# Database and ORM
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.12"

# HTTP client/server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# CLI parsing
clap = { version = "4.0", features = ["derive", "color", "suggestions"] }
clap_complete = "4.0"

# Template engine
minijinja = { version = "1.0", features = ["json"] }

# SNMP client  
snmp2 = "0.4.8"

# Git integration (will be added when needed)
# git2 = "0.18"

# Policy parsing
pest = "2.7"
pest_derive = "2.7"

# Configuration diffing
similar = "2.2"

# Utility crates
regex = "1.0"
dashmap = "5.0"
walkdir = "2.4"
bytes = "1.0"
futures-util = "0.3"
strum = "0.26"
strum_macros = "0.26"
ipnet = "2.9"
rayon = "1.8"
indicatif = "0.17"
glob = "0.3"

# Task scheduling
tokio-cron-scheduler = "0.10"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File handling
tempfile = "3.8"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

# Development and testing dependencies
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.39"
proptest = "1.5"

# Async runtime for migration
async-std = { version = "1", features = ["attributes", "tokio1"] }