[package]
name = "config-slicer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration slicing and diffing library and CLI tool"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "config-slicer"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# CLI parsing
clap = { workspace = true }

# Regex matching
regex = { workspace = true }

# Configuration diffing
similar = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

