[package]
name = "test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Shared test utilities for μNet (SQLite entity schema, savepoints, logging)"
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
sea-orm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
serde_json = { workspace = true }
unet-core = { path = "../unet-core" }
