[package]
name = "unet-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for μNet network configuration management"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization and data handling
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration management
config = { workspace = true }
toml = { workspace = true }

# Database and ORM
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Template engine
minijinja = { workspace = true }

# SNMP client
snmp2 = { workspace = true }

# Git integration
git2 = { workspace = true }

# Task scheduling
tokio-cron-scheduler = { workspace = true }

# Policy parsing
pest = { workspace = true }
pest_derive = { workspace = true }
regex = { workspace = true }

# Configuration diffing
similar = { workspace = true }
config-slicer = { path = "../config-slicer" }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-jaeger = { workspace = true }
tracing-appender = { workspace = true }
syslog-tracing = { workspace = true }
once_cell = { workspace = true }

# File system utilities
walkdir = { workspace = true }
sha2 = { workspace = true }
glob-match = { workspace = true }

# HTTP client and async utilities for live config
futures = { workspace = true }
reqwest = { workspace = true }

# Authentication and authorization
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }

# Input validation
validator = { workspace = true }
lazy_static = { workspace = true }

# Cryptography and secrets management
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
keyring = { workspace = true }
base64 = { workspace = true }

# External secret store integrations
vaultrs = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-config = { workspace = true }
# azure_security_keyvault = { workspace = true }  # Disabled
# azure_identity = { workspace = true }  # Disabled

# Metrics and monitoring
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sysinfo = { workspace = true }

# Database utilities
url = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

